# ScottBot

./: .dockerignore  .gitignore  Dockerfile  README.md  commands.txt  docker-compose.yml  motor_test.py  requirements.txt
api/: README.md  package-lock.json  package.json  worker-configuration.d.ts  wrangler.jsonc
api/src/: index.ts  types.ts
api/src/durable-objects/: orders.ts
api/src/routes/: order.ts
frontend/: README.md  cloudflare-env.d.ts  package-lock.json  package.json
frontend/src/app/: api-client.ts  globals.css  layout.tsx  not-found.tsx  page.tsx
frontend/src/app/activeOrder/: page.tsx
frontend/src/app/robot/: page.tsx
frontend/src/components/: Navbar.tsx
maps/: my_house7.pgm  my_house7.yaml  path_preview.pgm
pi/: camera.py  lidar_reader.py  obstacle_avoidance.py  websocket_test.py
ros2_ws/src/scottbot/: package.xml  setup.cfg  setup.py
ros2_ws/src/scottbot/config/: nav2_params.yaml
ros2_ws/src/scottbot/launch/: drive_to_goal_launch.py  nav2_launch.py  nav_launch.py  scottbot_launch.py  sim_launch.py  slam_launch.py  slam_real_launch.py
ros2_ws/src/scottbot/maps/: example_map.yaml
ros2_ws/src/scottbot/rviz/: nav.rviz  nav2.rviz  scottbot.rviz  slam.rviz
ros2_ws/src/scottbot/scottbot/: __init__.py  astar.py  astar_planner_node.py  camera_node.py  delivery_node.py  lidar_node.py  lidar_reader.py  motor_controller_node.py  nav_executor_node.py  obstacle_detector_node.py  odom_node.py  visualize_path.py
ros2_ws/src/scottbot/urdf/: scottbot.urdf.xacro
ros2_ws/src/scottbot/worlds/: empty.world  obstacles.world
rplidar_docker/: Dockerfile
(+9 files in other folders)
